// Copyright 2025 Google LLC
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//      http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

edition = "2023";

package com.google.android.as.oss.attestation.api;

option features.utf8_validation = NONE;
option java_multiple_files = true;
option java_package = "com.google.android.as.oss.attestation.api.proto";

/**
 * Struct representing a response received from an attestation measurement
 * client.
 */
message AttestationMeasurementResponse {
  repeated bytes key_attestation_certificate_chain = 1;
  string payload = 2;
  bytes signature_bytes = 3;

  bytes public_key = 4;

  bool content_binding_as_challenge = 5;
}
